Slight margin fix for padding around @handle
Forgot to document that I added a transparent padded border to the @handle in the profile view, but this commit fixes a slight issue where the header image was too tall.

--- a/mastodonMidnightBlue.css
+++ b/mastodonMidnightBlue.css
@@ -102,9 +102,12 @@
     display: inline-block;
  	padding: 7px 7px 8px 7px;
     border-radius: 8px;
+    margin-bottom: 0px;
     background: rgba(0,0,0,0.6);
     color: #ccc;
 }
+/*adjust margins to account for padding*/
+.account__header__content p {margin-bottom: 16px;}
 
 /*toots in columns button recolor, but more complicated bc of boosts and inline svg*/
 .icon-button:hover:nth-child(1){color: #0f9}
